# autoclick

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: config.rs  first.rs  main.rs  print.rs  start.rs
